--- a/myblog/blog/templates/blog/index.html
+++ b/myblog/blog/templates/blog/index.html
@@ -20,7 +20,7 @@
 						{% endif %}
 				</div>
 				<div class="">
-					<a href="{{ post.id }}" > {{ post.title }}</a>
+					<a href= "/index/{{post.pk}}" > {{ post.title }}</a>
 						<p>{{ post.discriptions }}</p>
 						<i style="">Автор-{{ post.author }}</i>
 						<hr>
