--- a/myblog/blog/templates/blog/index.html
+++ b/myblog/blog/templates/blog/index.html
@@ -20,9 +20,9 @@
 						{% endif %}
 				</div>
 				<div class="">
-					<a href= "/index/{{post.pk}}" > {{ post.title }}</a>
+					<a href= "/index/{{ post.pk }}" > {{ post.title }}</a>
 						<p>{{ post.discriptions }}</p>
-						<i style="">Автор-{{ post.author }}</i>
+						<i style="">Автор {{ post.author }}</i>
 						<hr>
 						<!--<div class="clear"></div>
 						<p class="link-read-post"><a href="{{ p.get_absolute_url }}"> Читать пост</a></p>-->
