--- a/myblog/blog/templates/blog/create.html
+++ b/myblog/blog/templates/blog/create.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static '/blog/css/style.css' %}" type="text/css" media="all" />
  </head>
+ <body>
 <div class="features">
   <h1>Форма по добавлению поста</h1>
   <form method="post">
