--- a/myblog/blog/templates/blog/del.html
+++ b/myblog/blog/templates/blog/del.html
@@ -9,7 +9,7 @@
 <br>
 <form action="" method="post">
     {% csrf_token %}
-    <input type="submit" value="confirm">
+    <input type="submit" value="Подтвердить?">
 </form>
 <p><a href="{% url 'home' %}">Отмена</a></p>
 </body>
